--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.12.0",
     "@aws-amplify/ui-react-storage": "^3.12.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "aws-amplify": "^6.15.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
@@ -19,7 +23,10 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/backend-cli": "^1.8.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.876.0",
+    "@aws-sdk/client-s3": "^3.878.0",
     "@eslint/js": "^9.33.0",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
