--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^7.3.1",
     "aws-amplify": "^6.15.5",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
