--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "aws-amplify": "^6.15.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
@@ -30,6 +31,7 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/sharp": "^0.31.1",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "aws-cdk-lib": "^2.204.0",
     "constructs": "^10.4.2",
